# ccapi

./: .gitignore
example/: CMakeLists.txt
example/src/combined_ob/: CMakeLists.txt  DataTypes.hpp  OrderBook.hpp  main.cpp
include/ccapi_cpp/: ccapi_macro.h
include/ccapi_cpp/service/: ccapi_execution_management_service_ascendex.h  ccapi_execution_management_service_bitfinex.h  ccapi_execution_management_service_bitget.h  ccapi_execution_management_service_bitget_futures.h  ccapi_execution_management_service_bitmart.h  ccapi_execution_management_service_bitmex.h  ccapi_execution_management_service_bitstamp.h  ccapi_execution_management_service_bybit.h  ccapi_execution_management_service_bybit_derivatives.h  ccapi_execution_management_service_coinbase.h  ccapi_execution_management_service_cryptocom.h  ccapi_execution_management_service_deribit.h  ccapi_execution_management_service_ftx_base.h  ccapi_execution_management_service_gateio_base.h  ccapi_execution_management_service_gemini.h  ccapi_execution_management_service_huobi.h  ccapi_execution_management_service_huobi_derivatives_base.h  ccapi_execution_management_service_kraken.h  ccapi_execution_management_service_kraken_futures.h  ccapi_execution_management_service_kucoin_base.h  ccapi_execution_management_service_mexc.h  ccapi_execution_management_service_mexc_futures.h  ccapi_execution_management_service_okx.h  ccapi_market_data_service_ascendex.h  ccapi_market_data_service_binance_base.h  ccapi_market_data_service_bitfinex.h  ccapi_market_data_service_bitget_base.h  ccapi_market_data_service_bitmart.h  (+18 more)
